# ehealth

./: Procfile  README.md  app.py  index.html  main.py  model_training.py  package-lock.json  package.json  pyproject.toml  requirements.txt  static.json  vercel.json  vite.config.js
app/: .model_pipeline.py.swp  model_pipeline.py
ehealth/: index.html  package-lock.json  package.json  tailwind.config.js
ehealth/src/: App.jsx
rsconnect-python/: ehealth.json
src/: App.jsx
