[tool.poetry]
name = "ehealth"
version = "0.1.0"
description = "in fullfillment of BMG5111"
authors = ["ririyeye-acnt <fengqiyun123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
Faker = "^25.8.0"
shiny = "^0.10.2"
scikit-learn = "^1.5.0"
shiny-validate = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
