[tool.poetry]
name = "ehealth"
version = "0.1.0"
description = "in fullfillment of BMG5111"
authors = ["ririyeye-acnt <fengqiyun123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny-validate = "^0.1.1"
streamlit = "^1.35.0"
scikit-learn = "^1.5.0"
imblearn = "^0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
