[tool.poetry]
name = "ehealth"
version = "0.1.0"
description = ""
authors = ["ririyeye-acnt <fengqiyun123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pandas = "^2.2.2"
lifelines = "^0.29.0"
Faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
